# voryn

./: .env.example  .gitignore  Projeto_SaaS_Agendamento_Inteligente.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_auth_support.py  0003_payment_charge_details.py  0004_appointment_no_show_flag.py  0005_company_reminder_hours.py  0006_company_smtp_credentials.py  0007_company_mercadopago_credentials.py
backend/src/app/: cli.py  main.py
backend/src/app/core/: config.py  database.py  deps.py  encryption.py  exceptions.py  security.py
backend/src/app/models/: __init__.py  appointment.py  auth.py  base.py  catalog.py  client.py  enums.py  notification.py  payment.py  tenant.py
backend/src/app/repositories/: appointment_repository.py  base.py  catalog_repository.py  client_repository.py  dashboard_repository.py  employee_repository.py  notification_repository.py  payment_repository.py  refresh_token_repository.py  user_repository.py  waitlist_repository.py
backend/src/app/routers/: appointments.py  auth.py  clients.py  companies.py  dashboard.py  employees.py  payments.py  rooms.py  (+4 more)
backend/tests/: conftest.py  test_appointment_service.py  test_appointments_conflict.py  test_auth.py  test_booking_service.py  test_booking_service_real_commits.py  test_crud_services.py  test_dashboard_service.py  test_mercadopago_per_tenant.py  test_notifications_and_waitlist.py  test_payment_service.py  test_smtp_email.py  test_tenant_isolation.py
(+93 files in other folders)
